Revert "Further fix social media icon colors in dark mode"
This reverts commit f5903a3bc478c885345ae6ce41c5b35b52e7b923.

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -745,7 +745,7 @@ footer {
   }
   .fa-stack {
     .fa-circle {
-      color: @gray-light;
+      color: @gray-dark;
     }
     .fa-inverse {
       color: #1a1a1a;
